less/app-mr-president.less
#mr-president {
	.modal-btn {
		display: block;
		background-color: #7598c9;
		line-height: 44px;
		color: #fff;
		font-weight: bold;
		font-size: 16px;

		&:hover { opacity: .7; }
		span {
			width: 44px;
			height: 44px;
			float: left;
			display: block;
			margin-right: 11px;
			background: url('../img/btn-share-tiny.gif') no-repeat center center;
			border-right: 1px solid #fff;
		}
	}
	.prompt {
		font-size: 16px;
		line-height: 1.5;
		margin-bottom: 22px;
		margin-top: 11px;
	}
}

#mr-president-modal {
	top: 5%; left: 10%;
	width: 80%; height: 90%;
	margin: 0;
	overflow: auto;
	background-color: #f1f1f1;

	.modal-header {
		padding: 22px;
		border-bottom: 2px solid #fff;

		h3 {
			font: normal 24px/1.2 Arial, Helvetica, sans-serif;
			color: #666;
		}
	}
	.modal-body {
		max-height: none;
		padding: 0;
		overflow: visible;
	}

	.legalese {
		font-size: 11px; color: #666;
		padding: 20px;
	}
}

.mr-president-form {
	form {
		margin: 0;
		padding: 0;
	}
	ul, ol {
		margin: 0;
		padding: 0;
		list-style: none;
	}
	li:after { visibility: hidden; display: block; content: ""; clear: both; height: 0; }
	ol > li {
		padding: 10px 20px;
		background-color: #f1f1f1;
		border-bottom: 2px solid #fff;
	}
	ol > li.form-submit,
	ol > li.form-photo {
		border-bottom: 0;
		padding-bottom: 0;
	}
	ul > li {
		padding: 0;
		margin: 0 0 5px 0;
	}
	ul > li:hover {
		background-color: #eee;
	}
	label {
		font-weight: bold;
		font-size: 17px;
		display: block;
		margin-bottom: 5px;
	}
	label.instructions {
		font-weight: normal;
		font-size: 14px;
		margin-bottom: 5px;
	}
	li.form-photo label.header {
		margin-bottom: 15px;
	}
	li.form-photo label.instructions {
		margin-bottom: 15px;
	}
	textarea {
		width: 95%;
		padding: 2%;
		height: 100px;
		font: 13px/1.5 Arial, Helvetica, sans-serif;
		color: #111;
	}
	input {
		font: 13px/1.5 Arial, Helvetica, sans-serif;
		color: #111;
	}
	input[type='text'] {
		padding: 5px 10px;
	}
	input[type='radio'] {
		margin-right: 10px;
		margin-top: -6px;
	}
	input[type='file'] {
		font-size: 16px;
	}
	img.sample-photo {
		float: right;
		margin-left: 10px;
		width: 30%;
		max-width: 138px;
	}
	button[type='submit'] {
		background: none;
		background-color: #7598c9;
		border: none;
		line-height: 45px;
		height: 45px;
		color: #fff;
		padding: 0 20px;
		font-size: 12px;
		cursor: pointer;
		text-shadow: none;
		border-radius: 0;
	}
	button[type='submit']:hover {
		opacity: 0.7;
	}
}

#photo-feed {

    h2 {
    	font: normal 22px Arial, Helvetica, sans-serif;
    	color: #666;
    	text-transform: capitalize;
    	margin: 0 0 11px 0;
    	clear: both;
    }

    .photo-section {
            border-top: 2px solid #ebebeb;
            padding: 20px 0;

            &:after { visibility: hidden; display: block; content: ""; clear: both; height: 0; }
    }

    .wrapper {
      width: 100%;
    }

    .photo-list {
            &:after { visibility: hidden; display: block; content: ""; clear: both; height: 0; }

            .load-more-spinner { border: none; }

            img {
                    float: left;
                    margin-left: 20px;
                    border: 1px solid #e0e0e0;

                    &:hover {
                            -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
                            -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
            opacity: .7;
                    }
            }
            a:first-child img { margin-left: 0; }
    }

    button { display: none; }
    .tumblrlink { display: none; }

    .photo.post {
      clear: both;
      margin-bottom: 20px;
    }
}


@media (max-width: 480px) {
    #photo-feed {
      .wrapper {
        height: 100px;
        width: 100%;
        overflow-x: scroll;
        overflow-y: hidden;
      }
    }

    #mr-president-modal {
            top: 5%; left: 5%; width: 90%; height: 90%;
            .modal-header h3 { font-size: 16px; }
    }
    .mr-president-form input[type='file'] { font-size: 12px; }
}

